--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">HockeyApp</string>
+    <string name="default_timer_text">Default Timer:\n\nGame length 5 minutes</string>
+    <string name="custom_timer_text">Custom Timer:\n</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="enable_sound">Enable Sound</string>
     <string name="enable_sound_summ">Enable Sound</string>
-    <string name="update_interval">Timer update interval</string>
-    <string name="update_interval_summ">The interval in milliseconds between each timer update.</string>
-    <string name="timer_text">Press screen\nto start</string>
+    <string name="timer_text">Press me</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="default_score">0</string>
